Added (my own) autoBind function library

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack-dev-server in root</title>
+    <title>React-Bootstrap Test</title>
     <link rel="stylesheet" href= "./client/css/bootstrap.min.css" >
     <link rel="stylesheet" href= "./client/css/bootstrap-theme.min.css" >
   </head>
   <body style="margin:20px">
-    Test 1 in root
-    <div id="main"></div>
+    <h1>React-Bootstrap Test</h1>
+    <div id="main">
+      <div id="buttonTest"></div>
+      <div id="modalTest"></div>
+    </div>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
     <script src="bundle.js"></script>
   </body>
